<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleView"
        android:textColor="#009dff"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:gravity="center"
        android:lines="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cityView"
        android:gravity="center"
        android:layout_alignTop="@+id/textView"
        android:layout_alignEnd="@+id/titleView"
        android:layout_toEndOf="@+id/textView5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_data"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="OnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        android:id="@+id/TemptextView"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tempView"
        android:gravity="center"
        android:layout_alignTop="@+id/TemptextView"
        android:layout_alignEnd="@+id/titleView"
        android:layout_toEndOf="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind"
        android:id="@+id/textView3"
        android:layout_below="@+id/TemptextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/windView"
        android:gravity="center"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignEnd="@+id/titleView"
        android:layout_alignStart="@+id/tempView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bar"
        android:id="@+id/textView5"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/barView"
        android:contextClickable="false"
        android:gravity="center"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignEnd="@+id/windView"
        android:layout_toEndOf="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/humView"
        android:gravity="center"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/barView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/water"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/waterView"
        android:gravity="center"
        android:layout_alignTop="@+id/textView9"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/humView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/dateView"
        android:textSize="10dp"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:id="@+id/textView"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/titleView"
        android:layout_alignParentStart="true" />

</RelativeLayout>
